# public/docs/openapi.yaml
@@ -5,7 +5,7 @@ info:
   version: 1.0.0
 servers:
   -
-    url: 'http://localhost'
+    url: 'http://localhost:8000'
 paths:
   /api/auth/login:
     post:
@@ -47,7 +47,7 @@ paths:
                 username:
                   type: string
                   description: 'The username of the  user.'
-                  example: consequatur
+                  example: ali
                 password:
                   type: string
                   description: 'The password of the  user.'
@@ -97,11 +97,11 @@ paths:
                 name:
                   type: string
                   description: 'The name of the  user.'
-                  example: modi
+                  example: ali
                 username:
                   type: string
                   description: 'The username of the  user.'
-                  example: architecto
+                  example: username
                 password:
                   type: string
                   description: 'The password of the  user.'
@@ -131,6 +131,13 @@ paths:
           example: application/json
           schema:
             type: string
+        -
+          in: header
+          name: authorization
+          description: ''
+          example: 'Example:bearer eyJ0eXAiOiJKV...'
+          schema:
+            type: string
       responses:
         200:
           description: ''
@@ -142,19 +149,6 @@ paths:
                 properties: {  }
       tags:
         - Endpoints
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                access_token:
-                  type: string
-                  description: access_token
-                  example: modi
-              required:
-                - access_token
       security: []
   /api/auth/refresh:
     post:
@@ -212,7 +206,7 @@ paths:
           in: header
           name: authorization
           description: ''
-          example: et
+          example: 'Example:bearer eyJ0eXAiOiJKV...'
           schema:
             type: string
       responses:
@@ -279,7 +273,7 @@ paths:
           in: header
           name: authorization
           description: ''
-          example: repellendus
+          example: 'Example:bearer eyJ0eXAiOiJKV...'
           schema:
             type: string
       responses:
